--- a/templates/etc/rabbitmq/inter_node_tls.config.j2
+++ b/templates/etc/rabbitmq/inter_node_tls.config.j2
@@ -1,18 +1,18 @@
 [
   {server, [
-    {cacertfile, "{{ rabbitmq_self_signed_cabundle }}"},
-    {certfile, "{{ rabbitmq_self_signed_crt }}"},
-    {keyfile,  "{{ rabbitmq_self_signed_priv }}"},
+    {cacertfile, "{{ rabbitmq_tls_cabundle }}"},
+    {certfile, "{{ rabbitmq_tls_cert }}"},
+    {keyfile,  "{{ rabbitmq_tls_private_key }}"},
     {secure_renegotiate, true},
     {verify, {{ rabbitmq_tls_verify }}},
-    {fail_if_no_peer_cert, {{ rabbitmq_fail_if_no_peer_cert|lower }}}
+    {fail_if_no_peer_cert, {{ rabbitmq_tls_fail_if_no_peer_cert|lower }}}
   ]},
   {client, [
-    {cacertfile, "{{ rabbitmq_self_signed_cabundle }}"},
-    {certfile, "{{ rabbitmq_self_signed_crt }}"},
-    {keyfile,  "{{ rabbitmq_self_signed_priv }}"},
+    {cacertfile, "{{ rabbitmq_tls_cabundle }}"},
+    {certfile, "{{ rabbitmq_tls_cert }}"},
+    {keyfile,  "{{ rabbitmq_tls_private_key }}"},
     {secure_renegotiate, true},
     {verify, {{ rabbitmq_tls_verify }}},
-    {fail_if_no_peer_cert, {{ rabbitmq_fail_if_no_peer_cert|lower }}}
+    {fail_if_no_peer_cert, {{ rabbitmq_tls_fail_if_no_peer_cert|lower }}}
   ]}
 ].
