--- a/templates/etc/rabbitmq/rabbitmq.conf.j2
+++ b/templates/etc/rabbitmq/rabbitmq.conf.j2
@@ -15,6 +15,7 @@ management.ssl.port = {{ rabbitmq_tls_mgmt_ssl_port }}
 {% endif %}
 {% if 'ec2' == rabbitmq_clustering_type %}
 cluster_formation.peer_discovery_backend = aws
+cluster_formation.aws.region = {{ rabbitmq_discovery_ec2_region }}
 cluster_formation.aws.access_key_id = {{ rabbitmq_discovery_ec2_access_key }}
 cluster_formation.aws.secret_key = {{ rabbitmq_discovery_ec2_secret }}
 {% if rabbitmq_discovery_ec2_autoscaling_group is sameas true %}
